--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^1.6.6",
+    "node-sass": "^4.5.3",
     "rxjs": "^5.1.0",
+    "sass": "^0.5.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
